--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: Evaluator
 main: dktapps\Evaluator\Main
 version: 0.0.1
-api: [3.0.0-ALPHA7]
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11]
 load: POSTWORLD
 author: dktapps
 description: Evil plugin
